modified:   SclnD.html 	new file:   SmMrrGbt.html

--- a/SclnD.html
+++ b/SclnD.html
@@ -27,7 +27,7 @@
                 <line class="line accu g1f3" marker-end="url(#Haccu)" x1="5.87" y1="6.73" x2="5.13" y2="5.27"></line>
                 <line class="line accu b1c3" marker-end="url(#Haccu)" x1="1.13" y1="6.73" x2="1.87" y2="5.27"></line>
                 <line class="line good c2c3" marker-end="url(#Hgood)" x1="2" y1="5.7" x2="2" y2="5.3"></line>
-                <line class="line tricky d2d4" marker-end="url(#Htricky)" x1="3" y1="5.7" x2="3" y2="4.3"></line>
+                <line class="line good d2d4" marker-end="url(#Hgood)" x1="3" y1="5.7" x2="3" y2="4.3"></line>
                 <line class="line common d2d3" marker-end="url(#Hcommon)" x1="3" y1="5.7" x2="3" y2="5.3"></line>
                 <line class="line common b2b3" marker-end="url(#Hcommon)" x1="1" y1="5.7" x2="1" y2="5.3"></line>
                 <line class="line common g1e2" marker-end="url(#Hcommon)" x1="5.73" y1="6.87" x2="4.27" y2="6.13"></line>
@@ -122,8 +122,8 @@
             2. Nc3<br>클로즈드<br>Closed<br><br></a></li>
             <li><a class="good" onmouseenter="See('.c2c3')" onmouseleave="Unsee('.c2c3')" href="SclnAlpn.html">
             2. c3<br>알라핀<br>Alapin<br><br></a></li>
-            <li><a class="tricky" onmouseenter="See('.d2d4')" onmouseleave="Unsee('.d2d4')" href="">
-            2. d4🚫<br>스미스 모라 갬빗<br>Smith-Morra Gambit<br><br></a></li>
+            <li><a class="good" onmouseenter="See('.d2d4')" onmouseleave="Unsee('.d2d4')" href="SmMrrGbt.html">
+            2. d4<br>스미스 모라 갬빗<br>Smith-Morra Gambit<br><br></a></li>
             <li><a class="tricky" onmouseenter="See('.b2b4')" onmouseleave="Unsee('.b2b4')" href="">
             2. b4🚫<br>윙 갬빗<br>Wing Gambit<br><br></a></li>
             <li><a class="common" onmouseenter="See('.f1c4')" onmouseleave="Unsee('.f1c4')" href="">
@@ -162,7 +162,7 @@
         오픈 게임을 생각하고 두면 흑에게 이득될 것이 없습니다.</p>
         <p>
         시실리안 중에서도 유명한 것은 흑의 c폰과 백의 d폰이 교환되는 오픈 시실리안입니다.
-        오픈 시실리안은 10개의 하위분류로 나뉘고,
+        오픈 시실리안만 해도 대표적으로 10개의 하위분류로 나뉘고,
         그 각각의 오프닝 중에 오픈 게임 전체만큼이나 연구가 이루어진 것도 있을 정도로
         시실리안은 이론이 깊고 방대한 만큼 섣불리 쓰기는 어렵습니다.
         만약 흑이 나는 배운 적 없는 시실리안을 꺼내들다면 오픈 시실리안이 아닌
